@@ -1,4 +1,10 @@
-2006-02-27  Shigeharu Takeno  <shige@iee.niit.ac.jp>
+2008-07-04  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	* src/eval.h src/eval.c: New routines fill_gpval_integer,
+	fill_gpval_float, fill_gpval_complex. To be used for more readable
+	setting of GPVAL_ variables.
+
+2008-06-27  Shigeharu Takeno  <shige@iee.niit.ac.jp>
 
 	* docs/gnuplot-ja.doc docs/term-ja.diff docs/README.ja:
 	Sync Japanese documentation to gnuplot.doc rev 1.517
